# calculating_pi_cpp

./: CMakeLists.txt  main.cpp
